--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "tyro",
     "protobuf",
     "xformers>=0.0.27.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
-    "bitsandbytes",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "triton>=3.0.0 ; ('linux' in sys_platform)",
     "triton-windows ; (sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
     "sentencepiece>=0.2.0",
@@ -175,97 +175,97 @@ cu128onlytorch280 = [
 ]
 cu118 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118only]",
 ]
 cu121 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121only]",
 ]
 cu118-torch211 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch211]",
 ]
 cu121-torch211 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch211]",
 ]
 cu118-torch212 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch212]",
 ]
 cu121-torch212 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch212]",
 ]
 cu118-torch220 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch220]",
 ]
 cu121-torch220 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch220]",
 ]
 cu118-torch230 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch230]",
 ]
 cu121-torch230 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch230]",
 ]
 cu118-torch240 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch240]",
 ]
 cu121-torch240 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch240]",
 ]
 cu124-torch240 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu124onlytorch240]",
 ]
 cu118-torch250 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch250]",
 ]
 cu121-torch250 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch250]",
 ]
 cu124-torch250 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu124onlytorch250]",
 ]
 cu118-torch251 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch251]",
 ]
 cu121-torch251 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch251]",
 ]
 cu124-torch251 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu124onlytorch251]",
 ]
 cu118-torch260 = [
@@ -285,47 +285,47 @@ cu126-torch260 = [
 ]
 cu118-torch270 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch270]",
 ]
 cu126-torch270 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu126onlytorch270]",
 ]
 cu128-torch270 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu128onlytorch270]",
 ]
 cu118-torch271 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch271]",
 ]
 cu126-torch271 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu126onlytorch271]",
 ]
 cu128-torch271 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu128onlytorch271]",
 ]
 cu118-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch280]",
 ]
 cu126-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu126onlytorch280]",
 ]
 cu128-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu128onlytorch280]",
 ]
 kaggle = [
@@ -333,35 +333,35 @@ kaggle = [
 ]
 kaggle-new = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
 ]
 conda = [
     "unsloth[huggingface]",
 ]
 colab-torch211 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch211]",
 ]
 flashattention = [
-    "packaging ; 'linux' in sys_platform",
-    "ninja ; 'linux' in sys_platform",
-    "flash-attn>=2.6.3 ; 'linux' in sys_platform",
+    "packaging ; ('linux' in sys_platform)",
+    "ninja ; ('linux' in sys_platform)",
+    "flash-attn>=2.6.3 ; ('linux' in sys_platform)",
 ]
 colab-ampere-torch211 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch211]",
     "unsloth[flashattention]",
 ]
 colab-torch220 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch220]",
 ]
 colab-ampere-torch220 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch220]",
     "unsloth[flashattention]",
 ]
@@ -379,7 +379,7 @@ colab-new = [
     "protobuf",
     "huggingface_hub>=0.34.0",
     "hf_transfer",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[triton]",
 ]
 colab-no-deps = [
@@ -387,7 +387,7 @@ colab-no-deps = [
     "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0,<=0.23.0",
     "peft>=0.7.1",
     "xformers<0.0.27",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "protobuf",
 ]
 colab = [
@@ -399,103 +399,103 @@ colab-ampere = [
 ]
 cu118-ampere = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118only]",
     "unsloth[flashattention]",
 ]
 cu121-ampere = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121only]",
     "unsloth[flashattention]",
 ]
 cu118-ampere-torch211 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch211]",
     "unsloth[flashattention]",
 ]
 cu121-ampere-torch211 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch211]",
     "unsloth[flashattention]",
 ]
 cu118-ampere-torch220 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch220]",
     "unsloth[flashattention]",
 ]
 cu121-ampere-torch220 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch220]",
     "unsloth[flashattention]",
 ]
 cu118-ampere-torch230 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch230]",
     "unsloth[flashattention]",
 ]
 cu121-ampere-torch230 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch230]",
     "unsloth[flashattention]",
 ]
 cu118-ampere-torch240 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch240]",
     "unsloth[flashattention]",
 ]
 cu121-ampere-torch240 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch240]",
     "unsloth[flashattention]",
 ]
 cu124-ampere-torch240 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu124onlytorch240]",
     "unsloth[flashattention]",
 ]
 cu118-ampere-torch250 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch250]",
     "unsloth[flashattention]",
 ]
 cu121-ampere-torch250 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch250]",
     "unsloth[flashattention]",
 ]
 cu124-ampere-torch250 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu124onlytorch250]",
     "unsloth[flashattention]",
 ]
 cu118-ampere-torch251 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch251]",
     "unsloth[flashattention]",
 ]
 cu121-ampere-torch251 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu121onlytorch251]",
     "unsloth[flashattention]",
 ]
 cu124-ampere-torch251 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.43.3",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu124onlytorch251]",
     "unsloth[flashattention]",
 ]
@@ -519,55 +519,55 @@ cu126-ampere-torch260 = [
 ]
 cu118-ampere-torch270 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch270]",
     "unsloth[flashattention]",
 ]
 cu126-ampere-torch270 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu126onlytorch270]",
     "unsloth[flashattention]",
 ]
 cu128-ampere-torch270 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu128onlytorch270]",
     "unsloth[flashattention]",
 ]
 cu118-ampere-torch271 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch271]",
     "unsloth[flashattention]",
 ]
 cu126-ampere-torch271 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu126onlytorch271]",
     "unsloth[flashattention]",
 ]
 cu128-ampere-torch271 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu128onlytorch271]",
     "unsloth[flashattention]",
 ]
 cu118-ampere-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu118onlytorch280]",
     "unsloth[flashattention]",
 ]
 cu126-ampere-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu126onlytorch280]",
     "unsloth[flashattention]",
 ]
 cu128-ampere-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes>=0.45.5",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu128onlytorch280]",
     "unsloth[flashattention]",
 ]
