--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
-    "unsloth_zoo>=2025.10.9",
+    "unsloth_zoo>=2025.10.10",
     "wheel>=0.42.0",
     "packaging",
     "torch>=2.4.0",
@@ -47,7 +47,7 @@ dependencies = [
     "hf_transfer",
     "diffusers",
     "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
-    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0,<=0.23.0",
+    "trl>=0.18.2,!=0.19.0,<=0.23.0",
 ]
 
 [tool.setuptools.dynamic]
@@ -61,7 +61,7 @@ exclude = ["images*", "tests*", "kernels/moe*"]
 
 [project.optional-dependencies]
 huggingface = [
-    "unsloth_zoo>=2025.10.9",
+    "unsloth_zoo>=2025.10.10",
     "wheel>=0.42.0",
     "packaging",
     "torchvision",
@@ -78,7 +78,7 @@ huggingface = [
     "hf_transfer",
     "diffusers",
     "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
-    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0,<=0.23.0",
+    "trl>=0.18.2,!=0.19.0,<=0.23.0",
 ]
 base = [
     "unsloth[huggingface]",
@@ -366,7 +366,7 @@ colab-ampere-torch220 = [
     "unsloth[flashattention]",
 ]
 colab-new = [
-    "unsloth_zoo>=2025.10.9",
+    "unsloth_zoo>=2025.10.10",
     "packaging",
     "tyro",
     "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
@@ -384,7 +384,7 @@ colab-new = [
 ]
 colab-no-deps = [
     "accelerate>=0.34.1",
-    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0,<=0.23.0",
+    "trl>=0.18.2,!=0.19.0,<=0.23.0",
     "peft>=0.7.1",
     "xformers<0.0.27",
     "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
